--- a/index.html
+++ b/index.html
@@ -4,34 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tradutor de Libras</title>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-			crossorigin="anonymous"
-		/>
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
-
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-			crossorigin="anonymous"
-		></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="left-panel">
-				<h1>Traduza sua fala ou seu texto para Libras de forma fácil!</h1>
-				<p>Clique no microfone abaixo para gravar um texto para traduzir.</p>
+				<h1>Traduza sua fala para Libras de forma fácil!</h1>
+				<p>
+					Clique no microfone abaixo para gravar um texto para traduzir, clique
+					nele ao parar.
+				</p>
 
-				<p class="result"></p>
+				<code class="result"></code>
 
 				<div class="row row-cols-3">
 					<button class="btn btn-primary record">
 						<i class="bi bi-mic-fill"></i>
 						Gravar
 					</button>
-					<button class="btn btn-primary">
+					<button class="btn btn-primary stop" disabled>
 						<i class="bi bi-mic-mute-fill"></i>
 						Parar
 					</button>
@@ -54,15 +45,6 @@
 		</div>
 
 		<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-		<script src="script.js"></script>
-		<script defer>
-			new window.VLibras.Widget('https://vlibras.gov.br/app');
-
-			// abre o widget 50ms apos carregamento
-			setTimeout(() => {
-				const activeClass = document.querySelector('.access-button');
-				activeClass.click();
-			}, 50);
-		</script>
+		<script src="./script.js"></script>
 	</body>
 </html>
