refactor/style: troca de botões/estilos em coluna

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 				<code class="result"></code>
 
-				<div class="row row-cols-3">
+				<div class="col">
 					<button class="btn btn-primary record">
 						<i class="bi bi-mic-fill"></i>
 						Gravar
 					</button>
-					<button class="btn btn-primary stop" disabled>
+					<button class="btn btn-danger stop" disabled>
 						<i class="bi bi-mic-mute-fill"></i>
 						Parar
 					</button>
